--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,25 +12,25 @@ body {
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
+    --background: 65 67% 89%; /* F2F6D0 */
+    --foreground: 27 24% 21%; /* 443627 */
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
+    --primary: 35 82% 50%; /* D98324 */
+    --primary-foreground: 48 67% 80%; /* EFDCAB */
+    --secondary: 48 67% 80%; /* EFDCAB */
+    --secondary-foreground: 27 24% 21%; /* 443627 */
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
+    --accent: 35 82% 50%; /* D98324 */
+    --accent-foreground: 65 67% 89%; /* F2F6D0 */
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
+    --border: 35 82% 50%; /* D98324 */
     --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
+    --ring: 35 82% 50%; /* D98324 */
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
@@ -39,25 +39,25 @@ body {
     --radius: 0.5rem;
   }
   .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
+    --background: 27 24% 21%; /* 443627 */
+    --foreground: 48 67% 80%; /* EFDCAB */
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
+    --primary: 35 82% 50%; /* D98324 */
+    --primary-foreground: 65 67% 89%; /* F2F6D0 */
+    --secondary: 48 67% 80%; /* EFDCAB */
+    --secondary-foreground: 27 24% 21%; /* 443627 */
     --muted: 0 0% 14.9%;
     --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
+    --accent: 35 82% 50%; /* D98324 */
+    --accent-foreground: 65 67% 89%; /* F2F6D0 */
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
+    --border: 35 82% 50%; /* D98324 */
     --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
+    --ring: 35 82% 50%; /* D98324 */
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
@@ -108,8 +108,6 @@ body {
 main {
   flex: 1;
 }
-
-
 
 @layer base {
   * {
